shopcloud/manifests/overlays/prod/base/cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    name: app
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
